test/cases/compile_errors/invalid_underscore_placement_in_float_literal-2.zig
fn main() void {
    var bad: f128 = 1_.0;
    _ = bad;
}

// error
// backend=stage2
// target=native
//
// :2:23: error: expected digit before '.'
